--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dom-reactive",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "A library for working with DOM with syntax similar to Vue.",
   "main": "index.ts",
   "scripts": {
@@ -15,7 +15,8 @@
     "native",
     "HTML",
     "DOM",
-    "With",
+    "reactive",
+    "with",
     "syntax",
     "similar",
     "Vue"
