--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
-    "outDir": "./dist",
+    // "outDir": "./",
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
