--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dom-reactive",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "A library for working with DOM with syntax similar to Vue.",
   "main": "./index.ts",
   "module": "./index.mjs",
@@ -12,9 +12,9 @@
     }
   },
   "files": [
-    "./index.mjs",
-    "./index.js",
-    "./index.d.ts"
+    "./index.ts",
+    "./index.d.ts",
+    "./index.mjs"
   ],
   "repository": {
     "type": "git",
