--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "dom-reactive",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "A library for working with DOM with syntax similar to Vue.",
   "main": "./index.ts",
-  "module": "./index.mjs",
   "types": "./index.d.ts",
+  "module": "./index.mjs",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
+      "import": "./index.ts",
+      "require": "./index.ts"
     }
   },
   "files": [
