--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dom-reactive",
-  "version": "1.2.4",
+  "version": "1.2.7",
   "description": "A library for working with DOM with syntax similar to Vue.",
   "main": "./index.ts",
   "types": "./index.d.ts",
@@ -47,6 +47,7 @@
     "vite-plugin-dts": "^4.5.0"
   },
   "dependencies": {
+    "dom-reactive": "^1.2.7",
     "mitt": "^3.0.1"
   }
 }
