--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "dom-reactive",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "description": "A library for working with DOM with syntax similar to Vue.",
-  "main": "./index.ts",
-  "types": "./index.d.ts",
-  "module": "./index.mjs",
+  "main": "./dist/index.ts",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.mjs",
   "exports": {
     ".": {
-      "import": "./index.ts",
-      "require": "./index.ts"
+      "import": "./dist/index.ts",
+      "require": "./dist/index.ts"
     }
   },
   "files": [
-    "./index.ts",
-    "./index.d.ts",
-    "./index.mjs"
+    "./dist/index.ts",
+    "./dist/index.d.ts",
+    "./dist/index.mjs"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/artemsites/dom-reactive.git"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && cp index.ts dist",
     "publish": "npm publish"
   },
   "keywords": [
