--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dom-reactive",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A library for working with DOM with syntax similar to Vue.",
   "main": "./dist/index.ts",
   "types": "./dist/index.d.ts",
@@ -14,7 +14,8 @@
   "files": [
     "./dist/index.ts",
     "./dist/index.d.ts",
-    "./dist/index.mjs"
+    "./dist/index.mjs",
+    "./dist/index.mjs.map"
   ],
   "repository": {
     "type": "git",
